# hydrox

./: .pre-commit-config.yaml  README.md  docs.py  pyproject.toml
hydrox/: __main__.py  cli.py
hyrox/: __init__.py  __main__.py  cli.py  data.py  optimize.py  plot.py  utils.py
tests/: test_optimize.py  test_utils.py
