[tool.poetry]
name = "hyrox"
version = "0.1.0"
description = "Tools to analyze hyrox data and individuals"
authors = ["Will Dean <wd60622@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
pymc = "5.7.0"
lxml = "^4.9.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
typer = "^0.9.0"
conjugate-models = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
